change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Simple Multi Bahasa",
+  "name": "simple-multi-bahasa",
   "author": "Muhammad Al Anis Faishal",
   "version": "1.0.0",
   "license": "MIT",
